--- a/.swiftpm/xcode/xcshareddata/xcschemes/Hated.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Hated.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Networking"
-               BuildableName = "Networking"
-               BlueprintName = "Networking"
+               BlueprintIdentifier = "Hated"
+               BuildableName = "Hated"
+               BlueprintName = "Hated"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,9 +33,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "NetworkingTests"
-               BuildableName = "NetworkingTests"
-               BlueprintName = "NetworkingTests"
+               BlueprintIdentifier = "HatedTests"
+               BuildableName = "HatedTests"
+               BlueprintName = "HatedTests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
@@ -61,9 +61,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Networking"
-            BuildableName = "Networking"
-            BlueprintName = "Networking"
+            BlueprintIdentifier = "Hated"
+            BuildableName = "Hated"
+            BlueprintName = "Hated"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
