--- a/.swiftpm/xcode/xcshareddata/xcschemes/ResponseParser.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/ResponseParser.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1320"
+   LastUpgradeVersion = "1330"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Networking"
-               BuildableName = "Networking"
-               BlueprintName = "Networking"
+               BlueprintIdentifier = "ResponseParser"
+               BuildableName = "ResponseParser"
+               BlueprintName = "ResponseParser"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,9 +33,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "NetworkingTests"
-               BuildableName = "NetworkingTests"
-               BlueprintName = "NetworkingTests"
+               BlueprintIdentifier = "ResponseParserTests"
+               BuildableName = "ResponseParserTests"
+               BlueprintName = "ResponseParserTests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
@@ -61,9 +61,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Networking"
-            BuildableName = "Networking"
-            BlueprintName = "Networking"
+            BlueprintIdentifier = "ResponseParser"
+            BuildableName = "ResponseParser"
+            BlueprintName = "ResponseParser"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
